--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,11 @@ httpx = "^0.16.1"
 pydantic = {extras = ["dotenv"], version = "^1.7.3"}
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2.2"
+isort = "^5.7.0"
 mypy = "^0.800"
+pylint = "^2.7.0"
+pytest = "^6.2.2"
+pytest-asyncio = "^0.14.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
