--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ faust = {extras = ["uvloop"], version = "^1.10.4"}
 asyncpg = "^0.22.0"
 httpx = "^0.16.1"
 pydantic = {extras = ["dotenv"], version = "^1.7.3"}
+retrying-async = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.7.0"
